// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationDetailModal — RTL/LTR safety > LTR rendering > snapshot — LTR open modal 1`] = `
<div
  dir="ltr"
/>
`;

exports[`NotificationDetailModal — RTL/LTR safety > RTL rendering > snapshot — RTL open modal 1`] = `
<div
  dir="rtl"
/>
`;

exports[`NotificationRow — RTL/LTR safety > LTR rendering > snapshot — LTR 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex items-center gap-3 px-4 py-2.5 outline-none transition-colors cursor-pointer hover:bg-muted focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-ring  "
    role="button"
    tabindex="0"
  >
    <div
      class="shrink-0"
    >
      <span
        aria-hidden="true"
        style="display: inline-flex; align-items: center; justify-content: center;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell h-4 w-4 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
      </span>
    </div>
    <div
      class="min-w-0 flex-1 flex items-baseline gap-1.5 overflow-hidden"
    >
      <span
        class="shrink-0 text-xs text-muted-foreground font-normal"
      >
        OPD Lite
      </span>
      <span
        aria-hidden="true"
        class="text-muted-foreground/60 text-xs select-none"
      >
        ·
      </span>
      <span
        class="truncate text-sm font-normal text-foreground"
      >
        Patient check-in
      </span>
    </div>
    <div
      class="flex items-center gap-1.5 shrink-0 ms-auto"
    >
      <span
        class="shrink-0 text-xs font-normal text-muted-foreground"
        data-slot="notification-time"
      >
        5m ago
      </span>
    </div>
  </div>
</div>
`;

exports[`NotificationRow — RTL/LTR safety > RTL rendering > snapshot — RTL 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex items-center gap-3 px-4 py-2.5 outline-none transition-colors cursor-pointer hover:bg-muted focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-ring  "
    role="button"
    tabindex="0"
  >
    <div
      class="shrink-0"
    >
      <span
        aria-hidden="true"
        style="display: inline-flex; align-items: center; justify-content: center;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell h-4 w-4 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
      </span>
    </div>
    <div
      class="min-w-0 flex-1 flex items-baseline gap-1.5 overflow-hidden"
    >
      <span
        class="shrink-0 text-xs text-muted-foreground font-normal"
      >
        OPD Lite
      </span>
      <span
        aria-hidden="true"
        class="text-muted-foreground/60 text-xs select-none"
      >
        ·
      </span>
      <span
        class="truncate text-sm font-normal text-foreground"
      >
        Patient check-in
      </span>
    </div>
    <div
      class="flex items-center gap-1.5 shrink-0 ms-auto"
    >
      <span
        class="shrink-0 text-xs font-normal text-muted-foreground"
        data-slot="notification-time"
      >
        5m ago
      </span>
    </div>
  </div>
</div>
`;
